# x3warrior

./: .gitignore  README.md  cp_wsl_to_x3pi.sh
src/dbus/: CMakeLists.txt  package.xml
src/dbus/include/dbus/: dbus.h  dbus_node.h
src/dbus/src/: dbus.cpp
src/interface/: CMakeLists.txt  package.xml
src/interface/msg/: DbusData.msg
src/warrior_bringup/: CMakeLists.txt  package.xml
src/warrior_bringup/launch/: warrior.py
src/warrior_common/: CMakeLists.txt  package.xml
src/warrior_common/include/warrior_common/: dlqr.hpp  five_bar_linkage.hpp  limiter.hpp  lqr.hpp  pid.hpp  vmc.hpp
src/warrior_common/src/: dlqr.cpp  five_bar_linkage.cpp  limiter.cpp  lqr.cpp  pid.cpp  vmc.cpp
src/warrior_control_manager/: CMakeLists.txt  package.xml
src/warrior_control_manager/src/: warrior_control_manager.cpp
src/warrior_controller/: CMakeLists.txt  package.xml  warrior_controller.xml
src/warrior_controller/include/warrior_controller/: .wheel_balancing_controller.hpp.swo  test_controller.hpp  test_handle.hpp  warrior_controller_compiler.h  warrior_handle.hpp  wheel_balancing_controller.hpp
src/warrior_controller/src/: .wheel_balancing_controller.cpp.swe  .wheel_balancing_controller.cpp.swf  .wheel_balancing_controller.cpp.swg  .wheel_balancing_controller.cpp.swh  .wheel_balancing_controller.cpp.swi  .wheel_balancing_controller.cpp.swj  .wheel_balancing_controller.cpp.swk  .wheel_balancing_controller.cpp.swm  .wheel_balancing_controller.cpp.swn  .wheel_balancing_controller.cpp.swo  imu_handle.cpp  test_controller.cpp  test_handle.cpp  warrior_handle.cpp  wheel_balancing_controller.cpp
src/warrior_dbus/: CMakeLists.txt  package.xml
src/warrior_dbus/include/dbus/: dbus.h  dbus_node.h
src/warrior_dbus/src/: dbus.cpp  dbus_node.cpp
src/warrior_description/: CMakeLists.txt  package.xml
src/warrior_description/config/: .robot_controller_config.yaml.swp  robot_controller_config.yaml
src/warrior_description/ros2_control/: warrior.ros2_control.xacro
src/warrior_description/urdf/: warrior.urdf.xacro
src/warrior_hardware/: CMakeLists.txt  package.xml  warrior_hardware.xml
src/warrior_hardware/include/warrior_hardware/: .go1_hardware_interface.hpp.swp  .hardware_singleton.hpp.swp  MF9025_hardware_interface.hpp  bsp_LK_MF9025.hpp  bsp_go1.hpp  can_driver.hpp  can_hardware_interface.hpp  crc.hpp  data_process.hpp  go1_config.hpp  go1_hardware_interface.hpp  hardware_singleton.hpp  imu_hardware_interface.hpp  serialport_hardware_interface.hpp  test_hardware_interface.hpp  visibility_control.h
src/warrior_hardware/src/: MF9025_hardware_interface.cpp  bsp_LK_MF9025.cpp  bsp_go1.cpp  can_driver.cpp  can_hardware_interface.cpp  crc.cpp  go1_config.cpp  go1_hardware_interface.cpp  imu_hardware_interface.cpp  serialport_hardware_interface.cpp  test_hardware_interface.cpp
src/warrior_interface/: CMakeLists.txt  package.xml
src/warrior_interface/msg/: Go1Feedback.msg  ImuData.msg  LK9025Feedback.msg  LQRDebugData.msg  SimulationData.msg  VMCDebugData.msg
