<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warrior_controller</name>
  <version>1.0.0</version>
  <description>Warrior controller</description>
  <license>Apache 2.0</license>
  <maintainer email="linkingo8@outlook.com">Linking</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>warrior_interface</depend>
  

  <build_depend>pluginlib</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
